--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "ArcoDesign Team",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --config ./config/vite.config.dev.ts",
+    "dev": "vite --config ./config/vite.config.dev.ts --host",
     "build": "vue-tsc --noEmit && vite build --config ./config/vite.config.prod.ts",
     "report": "cross-env REPORT=true npm run build",
     "preview": "npm run build && vite preview --host",
@@ -39,13 +39,16 @@
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/babel-plugin-jsx": "^1.1.1",
+    "autoprefixer": "^10.4.17",
     "consola": "^2.15.3",
     "cross-env": "^7.0.3",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
+    "postcss": "^8.4.34",
     "postcss-html": "^1.5.0",
     "rollup": "^3.9.1",
     "rollup-plugin-visualizer": "^5.8.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.8.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^3.2.5",
